--- a/app/curious_template/template-v19.html
+++ b/app/curious_template/template-v19.html
@@ -1,21 +1,10 @@
 <!doctype html>
-<html amp="" lang="{{lang}}" transformed="self;v=1" i-amphtml-layout="">
+<html ⚡>
   <head>
     <meta charset="utf-8">
-    <title>{{pagetitle}}</title>
+    <title>AMP Notes Story</title>
     <link rel="canonical" href="self.html" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="description" content="{{metadescription}}">
-    <meta name="keywords" content="{{metakeywords}}" />
-    <meta property="og:title" content="{{storytitle}}">
-    <meta property="og:description" content="{{metadescription}}">
-    <meta property="og:type" content="{{contenttype}}">
-    <meta property="og:locale" content="{{lang}}">
-    <meta property="article:published_time" content="{{publishedtime}}">
-    <meta property="article:modified_time" content="{{modifiedtime}}">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{storytitle}}">
-    <meta name="twitter:description" content="{{metadescription}}">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
