Pexels Images fixed

--- a/app/curious_template/curious-template-2.html
+++ b/app/curious_template/curious-template-2.html
@@ -93,11 +93,10 @@
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical">
           <div class="centered-container">
-            <div class="header">📘 Notes Chapter</div>
             <div class="text">
               {{storytitle}}
             </div>
-           <div class="footer"><p>&copy;ABC Classes</p></div>
+           <div class="footer"><p>&copy;SuvichaarAI</p></div>
           </div>
         </amp-story-grid-layer>
       </amp-story-page>
@@ -122,7 +121,7 @@
             <div class="text">
               CLICK NEXT FOR CONTINUE LEARNING.
             </div>
-           <div class="footer"><p>&copy;ABC Classes</p></div>
+           <div class="footer"><p>&copy;SuvichaarAI</p></div>
           </div>
         </amp-story-grid-layer>
         <amp-story-page-outlink layout="nodisplay" theme="light" >
